[tool.poetry]
authors = ["Gabriel Wu <wuzihua@pku.edu.cn>"]
description = ""
name = "ufdtd-taichi"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.23.2"
python = ">=3.10,<3.11"
taichi = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
